# Doom

./: Makefile  doom  hud.c  menu.c  test.c  text.c
Map_editor/: Makefile  test.c
Map_editor/inc/: doom.h
Map_editor/libft/srcs/: vz_ft_free.c
Map_editor/src/: main.c
doom_team/: CMakeLists.txt  main.c  map.txt  quickcg.h  test_wolf.cpp
doom_team/SDL/Cellar/freetype/2.9.1/: INSTALL_RECEIPT.json
doom_team/SDL/Cellar/freetype/2.9.1/lib/: libfreetype.dylib
doom_team/SDL/Cellar/jpeg/9c/lib/: libjpeg.dylib
doom_team/SDL/Cellar/libtiff/4.0.9_4/lib/: libtiff.5.dylib  libtiffxx.5.dylib
doom_team/SDL/Cellar/libtiff/4.0.9_4/lib/pkgconfig/: libtiff-4.pc
doom_team/SDL/Cellar/libtiff/4.0.9_4/share/doc/tiff-4.0.9/: ChangeLog
doom_team/SDL/Cellar/sdl/1.2.15/: INSTALL_RECEIPT.json
doom_team/SDL/Cellar/sdl/1.2.15/lib/: libSDL.dylib
doom_team/SDL/Cellar/sdl2/2.0.9_1/: INSTALL_RECEIPT.json
doom_team/SDL/Cellar/sdl2/2.0.9_1/lib/cmake/SDL2/: sdl2-config.cmake
doom_team/SDL/Cellar/sdl2/2.0.9_1/lib/pkgconfig/: sdl2.pc
doom_team/SDL/Cellar/sdl2_image/2.0.4/lib/: libSDL2_image-2.0.0.dylib
doom_team/SDL/Cellar/sdl2_ttf/2.0.14/: INSTALL_RECEIPT.json
doom_team/SDL/Cellar/sdl2_ttf/2.0.14/lib/: libSDL2_ttf.dylib
doom_team/SDL/Cellar/sdl2_ttf/2.0.14/lib/pkgconfig/: SDL2_ttf.pc
doom_team/SDL/Cellar/webp/1.0.0/: ChangeLog  INSTALL_RECEIPT.json  README
doom_team/SDL/Cellar/webp/1.0.0/lib/: libwebp.7.dylib
doom_team/SDL/Cellar/webp/1.0.0/lib/pkgconfig/: libwebp.pc  libwebpdecoder.pc  libwebpmux.pc
doom_team/SDL/Cellar/webp/1.0.0/share/man/man1/: cwebp.1
doom_team/include/: camera.h  defines.h  ft_math.h  get_next_line.h  player.h  player_stable.h  player_struct.h  window.h
doom_team/prend-master/: draw_scr.c  load_data.c  main_old.c  mein.c  portrend.c  prender.c  save_frame.c  unload.c
doom_team/read_file/: parse_player.c  parse_sector.c  parse_sector2.c  parse_vertex.c  parse_vertex2.c  validate_vertex.c  work_with_file.c
doom_team/src/events/: event.c  key_event.c  move_player.c
doom_team/src/ft_math/: ft_swap.c  get_next_line.c
doom_team/src/libft/: Makefile  ft_bzero.c  ft_isalpha.c  ft_isint.c  ft_isprint.c  ft_isspace.c  ft_length_of_digit.c  ft_lstdel.c  ft_lstdelone.c  ft_lstmap.c  ft_lstnew.c  ft_memccpy.c  ft_memchr.c  ft_memdel.c  ft_memset.c  ft_putendl_fd.c  ft_putstr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strndup.c  ft_strrchr.c  ft_strsplit.c  ft_strtrim.c  ft_toupper.c  libft.h
doom_team/src/sprites/: sprites.c
doom_team/src/system/: done.c  load_data_stable.c  unload_stable.c  verfy_map.c
doom_team/src/texture/: draw_image.c  draw_map.c  draw_scr_nostable.c  draw_scr_stable.c  load_png.c  load_texture.c  stock_draw_scr.c
doom_team/textures/: ceil.ppm  ceil2_norm.ppm  floor.ppm  floor2.ppm  floor2_norm.ppm  wall.ppm  wall2.ppm  wall2_norm.ppm  wall3.ppm  wall3_norm.ppm
hud/: hud.h  hud2.c  menu2.c
include/: wolf3d.h
libft/: ft_itoa.c  ft_minus.c  ft_putstr.c  ft_strdup.c  ft_strlen.c  libft.h
maps/: map_lab2.fdf
read/: CMakeLists.txt  main.c
read/SDL/Cellar/freetype/2.9.1/lib/pkgconfig/: freetype2.pc
read/SDL/Cellar/jpeg/9c/: INSTALL_RECEIPT.json
read/SDL/Cellar/jpeg/9c/lib/pkgconfig/: libjpeg.pc
read/SDL/Cellar/libpng/1.6.35/: INSTALL_RECEIPT.json
read/SDL/Cellar/libpng/1.6.35/lib/: libpng16.dylib
read/SDL/Cellar/libpng/1.6.35/lib/pkgconfig/: libpng16.pc
read/SDL/Cellar/libtiff/4.0.9_4/: INSTALL_RECEIPT.json
read/SDL/Cellar/sdl/1.2.15/.brew/: sdl.rb
read/SDL/Cellar/sdl/1.2.15/lib/pkgconfig/: sdl.pc
read/SDL/Cellar/sdl2/2.0.9_1/lib/: libSDL2-2.0.0.dylib
read/SDL/Cellar/sdl2_image/2.0.4/: INSTALL_RECEIPT.json
read/SDL/Cellar/sdl2_image/2.0.4/lib/pkgconfig/: SDL2_image.pc
read/SDL/Cellar/webp/1.0.0/: ChangeLog
read/SDL/Cellar/webp/1.0.0/lib/: libwebpdecoder.dylib  libwebpdemux.dylib  libwebpmux.dylib
read/SDL/Cellar/webp/1.0.0/lib/pkgconfig/: libwebpdemux.pc
read/include/: ft_math.h  get_next_line.h  parts.h  player.h  player_stable.h  window.h
read/prend-master/: draw_scr.c  load_data.c  main_old.c  mein.c  portrend.c  prender.c  unload.c
read/read_file/: parse_player.c  parse_sector.c  parse_sector2.c  parse_vertex.c  parse_vertex2.c  validate_vertex.c  work_with_file.c
read/src/: draw_image.c  draw_map.c  draw_scr_stable.c  event.c  key_event.c  load_data_stable.c  move_player.c  player_init.c  poly.c  texture_mapping.c  unload_stable.c  verfy_map.c
read/src/camera/: clip_camera.c  to_screen.c
read/src/ft_math/: ft_swap.c  get_next_line.c  v2_rotate.c
read/src/libft/: ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isascii.c  ft_isdigit.c  ft_itoa.c  ft_lstadd.c  ft_lstiter.c  ft_memalloc.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrimm.c  ft_tolower.c  libft.h
src/: ft_init_varible.c  game.c  main.c
taras/: doom
